(Almost completely) Fixed vertical alignments! WOOOOO!

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
         background: #ebebeb;
         color: #777;
         font-size: 10px;
-        width: 1000px;
+        width: 960px;
         height: 70px;
     }
 
@@ -28,7 +28,7 @@
         text-align: center;
         font-size: 10px;
         margin: 30px 10px;
-        width: 1000px;
+        width: 960px;
         height: 70px;
     }
 
@@ -90,6 +90,6 @@
         background: #ebebeb;
         font-size: 10px;
         text-align: center;
-        width: 1000px;
+        width:px;
         height: 70px;
     }
